--- a/EntryNow.WebApp/Pages/Entries/Index.razor
+++ b/EntryNow.WebApp/Pages/Entries/Index.razor
@@ -83,9 +83,7 @@
                                         }
                                         else
                                         {
-
                                             <a href="" @onclick="@(() => TemporaryEntryId(entrie.Id))" @onclick:preventDefault data-toggle="modal" data-target="#modal-default" >
-                                            @*<a href="#" data-toggle="modal" data-target="#modal-default" >*@
                                                 <i class="far fa-trash-alt" style="color:red;"></i>
                                             </a>
                                         }
@@ -158,7 +156,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">Alert Message!</h4>
+              <h4 class="modal-title">Confirm Delete</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
